# gst-imageprocessing

./: AUTHORS  ChangeLog  README  autogen.sh  configure.ac
src/: Makefile.am  gstimageprocessing.c  gstimageprocessing.h
