plugin_LTLIBRARIES = libgstimageprocessing.la

libgstimageprocessing_la_SOURCES = gstimageprocessing.c gstimageprocessing.h

libgstimageprocessing_la_CFLAGS = $(GST_CFLAGS)
libgstimageprocessing_la_LIBADD = $(GST_LIBS)
libgstimageprocessing_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstimageprocessing_la_LIBTOOLFLAGS = --tag=disable-static

noinst_HEADERS = gstimageprocessing.h
